--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,6 +21,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"
       integrity="sha512-CNgIRecGo7nphbeZ04Sc13ka07paqdeTu0WR1IM4kNcpmBAUSHSQX0FslNhTDadL4O5SAGapGt4FodqL8My0mA=="
@@ -34,10 +39,20 @@
         display: none;
       }
     </style>
-    <title>Online Free QR Code Generator</title>
+    <title>Free Online QR Code Generator</title>
   </head>
   <body>
-      
+    <header class="bg-gradient-to-r from-purple-500 to-blue-500 py-3 md:py-6">
+      <div class="max-w-5xl m-auto text-center">
+        <h1 class="text-3xl font-bold text-white mb-2 md:text-4xl">
+          QR Code Generator
+        </h1>
+        <p class="text-sm text-white md:text-lg">
+          Create and download QR codes easily
+        </p>
+      </div>
+    </header>
+
     <main>
       <div
         class="flex flex-col-reverse items-center justify-center p-10 m-auto gap-x-32 md:max-w-6xl md:flex-row"
@@ -100,12 +115,17 @@
               GENERATE QR CODE
             </button>
           </form>
-          <p style="margin-top: 40px;">© 2024 <a style="text-decoration: underline;" href="https://qrcodescanner.me/" target="_blank" >QRCodeScanner.Me</a> | All Rights Reserved.</p>
-        <!-- <div class="max-w-md w-full text-center mt-8">
-            <p class="text-lg font-semibold">Unlock the full potential of your communication strategy with ScanToChat.in. It's fast, free, and designed with your convenience in mind. Streamline your WhatsApp interactions today!</p>
-        </div> -->
         </div>
-          <!-- Generated QR Code -->
+        <div class="w-full md:w-1/3 self-center">
+          <img
+            src="img/qr-code.svg"
+            class="w-1/2 m-auto mb-10 md:w-full"
+            alt="image"
+          />
+        </div>
+      </div>
+
+      <!-- Generated QR Code -->
       <div
         id="generated"
         class="max-w-5xl m-auto flex flex-col text-center items-center justify-center mt-20"
@@ -145,10 +165,6 @@
         <!-- QR Code Output -->
         <div id="qrcode" class="m-auto"></div>
       </div>
-        </div>
-      </div>
-
     </main>
-        
   </body>
 </html>
