--- a/index.html
+++ b/index.html
@@ -39,19 +39,9 @@
         display: none;
       }
     </style>
-    <title>Free Online QR Code Generator</title>
+    <title>Online Free QR Code Generator</title>
   </head>
   <body>
-<header class="bg-gradient-to-r from-purple-500 to-blue-500 py-3 md:py-6">
-  <div class="max-w-5xl mx-auto px-4 md:px-0">
-    <h1 class="text-3xl font-bold text-white mb-2 md:text-4xl text-left">
-      QR Code Generator
-    </h1>
-    <p class="text-sm text-white md:text-lg text-left">
-      Create and download QR codes easily
-    </p>
-  </div>
-</header>
     <main>
       <div
         class="flex flex-col-reverse items-center justify-center p-10 m-auto gap-x-32 md:max-w-6xl md:flex-row"
