--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     <title>Online Free QR Code Generator</title>
   </head>
   <body>
+    <header class="p-4 mb-10 " style="background-color: #5970cf">
+        <div class="max-w-5xl m-auto">
+            <div class="text-xl font-bold text-white">Free QR Code Generator</div>
+        </div>
+    </header>
     <main>
       <div
         class="flex flex-col-reverse items-center justify-center p-10 m-auto gap-x-32 md:max-w-6xl md:flex-row"
