--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
     <title>Online Free QR Code Generator</title>
   </head>
   <body>
-    <header class="p-4 mb-10 " style="background-color: #5970cf">
-        <div class="max-w-5xl m-auto">
-            <div class="text-xl font-bold text-white">Free QR Code Generator</div>
-        </div>
+    <header class="bg-gradient-to-r from-purple-500 to-blue-500 py-3 md:py-6">
+      <div class="max-w-5xl m-auto">
+        <h1 class="text-3xl font-bold text-white mb-2 md:text-4xl">
+          QR Code Generator
+        </h1>
+      </div>
     </header>
     <main>
       <div
