--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
           />
         </div>
       </div>
-
+<div class="flex flex-col-reverse items-center justify-center p-10 m-auto gap-x-32 md:max-w-6xl md:flex-row">
+        <div class="w-full md:w-3/5">
       <!-- Generated QR Code -->
       <div
         id="generated"
