--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
               GENERATE QR CODE
             </button>
           </form>
+                    <p style="margin-top: 40px;">© 2024 <a style="text-decoration: underline;" href="https://qrcodescanner.me/" target="_blank" >QRCodeScanner.Me</a> | All Rights Reserved.</p>
+        <!-- <div class="max-w-md w-full text-center mt-8">
+            <p class="text-lg font-semibold">Unlock the full potential of your communication strategy with ScanToChat.in. It's fast, free, and designed with your convenience in mind. Streamline your WhatsApp interactions today!</p>
+        </div> -->
         </div>
         <div class="w-full md:w-1/3 self-center">
           <img
@@ -120,8 +124,6 @@
           />
         </div>
       </div>
-<div class="flex flex-col-reverse items-center justify-center p-10 m-auto gap-x-32 md:max-w-6xl md:flex-row">
-        <div class="w-full md:w-3/5">
       <!-- Generated QR Code -->
       <div
         id="generated"
@@ -161,45 +163,7 @@
 
         <!-- QR Code Output -->
         <div id="qrcode" class="m-auto"></div>
-      </div>
-<div class="w-full md:w-1/3 self-center">
-<div class="container">
-  <h2>Frequently Asked Questions</h2>
-  <div class="accordion">
-    <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Why is the moon sometimes out during the day?</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Why is the sky blue?</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Will we ever discover aliens?</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">How much does the Earth weigh?</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">How do airplanes stay up?</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-          
+      </div>     
     </main>
   </body>
 </html>
