--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?v=2">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
 <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png?v=2">
-<link rel="canonical" href="https://high-qr-code-generator.com/">
-<link rel="alternate" href="https://high-qr-code-generator.com/" hreflang="en">
-<link rel="alternate" href="https://high-qr-code-generator.com/" hreflang="x-default">
+<link rel="canonical" href="https://freeqrcodegenerator.me/">
+<link rel="alternate" href="https://freeqrcodegenerator.me/" hreflang="en">
+<link rel="alternate" href="https://freeqrcodegenerator.me/" hreflang="x-default">
 <script type="application">{
   "@context": "https://schema.org/",
   "@type": "WebSite",
