--- a/index.html
+++ b/index.html
@@ -1438,5 +1438,5 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-73436710-8');
-</script><script src="js/moment/moment.min.js"></script><script src="js/tempusdominus-bootstrap-4.min.js"></script><script src="js/qrcdr.min.js"></script><script src="js/call.js"></script>    </body>
+</script><script src="js/moment.min.js"></script><script src="js/tempusdominus-bootstrap-4.min.js"></script><script src="js/qrcdr.min.js"></script><script src="js/call.js"></script>    </body>
 </html>
