--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" dir="ltr">
     <head>
@@ -15,10 +14,10 @@
         <meta property="og:image" content="images/qr-code-generator-org.svg" />
 
         <link rel="shortcut icon" href="images/favicon.ico">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <script src="js/jquery-3.5.1.min.js"></script>
-        <link href="js/spectrum.min.css" rel="stylesheet"><link href="js/ol.css" rel="stylesheet"><link href="js/tempusdominus-bootstrap-4.min.css" rel="stylesheet"><link href="style.css" rel="stylesheet"><style type="text/css">a, .btn-link{color:#4585bf;}.text-primary{color:#4585bf!important;}.navbar-nav a, .navbar-nav .nav-link, .navbar-toggler{color:#F6F6F6;}a:hover, a:active, a:focus, .btn-link:hover, .btn-link:active, .btn-link:focus, .dropdown-menu a.dropdown-item{color:#315e86;}.bg-primary, .nav-pills .nav-link.active, .nav-pills .show > .nav-link, label.custom-file-label:after{color:#F6F6F6;background-color:#4585bf!important;}a.dropdown-item.active, a.dropdown-item:active{-webkit-box-shadow:inset 4px 0 0 0 #4585bf;box-shadow:inset 4px 0 0 0 #4585bf;background-color:transparent;}.btn-primary, .btn-primary:disabled, a.btn-primary{border-color:#4585bf;background-color:#4585bf;color:#F6F6F6;}.btn-outline-primary, .btn-outline-primary:disabled, a.btn-outline-primary{border-color:#4585bf;color:#4585bf;}a.btn-primary:hover, .btn-primary:not(:disabled):not(.disabled):hover,.btn-primary:not(:disabled):not(.disabled):active,.btn-primary:not(:disabled):not(.disabled):focus,.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle,.btn-outline-primary:hover,.btn-outline-primary:active,.btn-outline-primary:focus,.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show > .btn-outline-primary.dropdown-toggle{border-color:#315e86;background-color:#315e86;color:#F6F6F6;}.btn-outline-light{border-color:#F6F6F6;color:#F6F6F6;}.btn-outline-light:hover,.btn-outline-light:active,.btn-outline-light:focus,.btn-outline-light:not(:disabled):not(.disabled).active, .btn-outline-light:not(:disabled):not(.disabled):active, .show > .btn-outline-light.dropdown-toggle{background-color:#F6F6F6;border-color:#F6F6F6;color:#4585bf;}</style>        <script data-ad-client="ca-pub-5825186224394282" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <link href="js/spectrum/spectrum.min.css" rel="stylesheet"><link href="js/ol/ol.css" rel="stylesheet"><link href="js/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"><link href="style.css" rel="stylesheet"><style type="text/css">a, .btn-link{color:#22b747;}.text-primary{color:#22b747!important;}.navbar-nav a, .navbar-nav .nav-link, .navbar-toggler{color:#F6F6F6;}a:hover, a:active, a:focus, .btn-link:hover, .btn-link:active, .btn-link:focus, .dropdown-menu a.dropdown-item{color:#188132;}.bg-primary, .nav-pills .nav-link.active, .nav-pills .show > .nav-link, label.custom-file-label:after{color:#F6F6F6;background-color:#22b747!important;}a.dropdown-item.active, a.dropdown-item:active{-webkit-box-shadow:inset 4px 0 0 0 #22b747;box-shadow:inset 4px 0 0 0 #22b747;background-color:transparent;}.btn-primary, .btn-primary:disabled, a.btn-primary{border-color:#22b747;background-color:#22b747;color:#F6F6F6;}.btn-outline-primary, .btn-outline-primary:disabled, a.btn-outline-primary{border-color:#22b747;color:#22b747;}a.btn-primary:hover, .btn-primary:not(:disabled):not(.disabled):hover,.btn-primary:not(:disabled):not(.disabled):active,.btn-primary:not(:disabled):not(.disabled):focus,.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle,.btn-outline-primary:hover,.btn-outline-primary:active,.btn-outline-primary:focus,.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show > .btn-outline-primary.dropdown-toggle{border-color:#188132;background-color:#188132;color:#F6F6F6;}.btn-outline-light{border-color:#F6F6F6;color:#F6F6F6;}.btn-outline-light:hover,.btn-outline-light:active,.btn-outline-light:focus,.btn-outline-light:not(:disabled):not(.disabled).active, .btn-outline-light:not(:disabled):not(.disabled):active, .show > .btn-outline-light.dropdown-toggle{background-color:#F6F6F6;border-color:#F6F6F6;color:#22b747;}</style>        <script data-ad-client="ca-pub-5825186224394282" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body class="qrcdr">
         <nav class="navbar bg-primary m-0 navbar-expand-sm navbar-dark bg-dark">
@@ -178,7 +177,7 @@
     </div>
         <div class="tab-pane fade " id="location">
         <h4>Location</h4>
-            <script src="js/ol.js"></script>
+            <script src="js/ol/ol.js"></script>
         <small>Search an address or drag the marker to adjust the position and get the coordinates</small>
         <div class="row">
             <div class="col-md-6 mb-1">
@@ -595,7 +594,7 @@
                         <span class="input-group-text">BTC</span>
                     </div>
                 </div>
-                <small class="form-text text-muted">1 BTC = 62858.26 USD<br />1 USD = 0.000016 BTC</small><small class="form-text text-muted">Last update: March 19 2024<br>Spot price from Coinbase</small>            </div>
+                <small class="form-text text-muted">1 BTC = 64681.75 USD<br />1 USD = 0.000015 BTC</small><small class="form-text text-muted">Last update: March 19 2024<br>Spot price from Coinbase</small>            </div>
             <div class="col-sm-6">
                 <label>Item name</label>
                 <input type="text" name="btc_label" class="form-control">
@@ -1438,5 +1437,5 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-73436710-8');
-</script><script src="js/moment.min.js"></script><script src="js/tempusdominus-bootstrap-4.min.js"></script><script src="js/qrcdr.min.js"></script><script src="js/call.js"></script>    </body>
+</script><script src="js/moment/moment.min.js"></script><script src="js/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script><script src="js/qrcdr.min.js"></script><script src="js/call.js"></script>    </body>
 </html>
